2003-05-19  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: Use temp-dir for Commands on Buffer/Region.
	Use inactive regions also in XEmacs.

2003-05-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Repeat syntax): more updates

	* lily/simple-spacer.cc (solve): move solution process into
	solve(). This fixes a bug with collisions and raggedright = ##t.
 
	* scm/lily.scm (scm): remove output-pysk.scm, music-types.scm

	* ly/engraver-init.ly: remove GraceContext. Update examples.

2003-05-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (fonts): Also make fontball.

	* Website fixes:

	* ly/engraver-init.ly (GraceContext): Add.

	* run:

	    convert-ly $(find . -name *.ly)

	* ly/chord-modifiers-init.ly (ignatzekExceptionMusic): Hmm: fix
	new chords.

2003-05-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.7.19 released
	
	* scm/music-functions.scm (set-octavation): new function.

	* input/regression/ottava.ly: new file

	* lily/translator-scheme.cc (LY_DEFINE): new function
	ly:unset-context-property
	(LY_DEFINE) new function ly:context-property-where-defined: 

2003-05-18  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Add postfix syntax for horizontal groups.

	* lilypond.words: add few.

	* input/test/script-chart.ly: fix typo.

2003-05-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/define-grobs.scm: uniform naming for definitions and output
	routine files. 

	* ly/engraver-init.ly (ChoirStaffContext): add \description from
	scm/context-description.scm

	* lily/parser.yy (translator_spec_body): add \description to the
	\translator{} body syntax.

	* lily/ottava-engraver.cc: new file.

	* scm/chord-name.scm (natural-chord-alteration): replace old
	chord stuff. 

	* input/mutopia/R.Schumann/romanze-op28-2.ly: syntax updates.

	* Documentation/user/refman.itely (Metronome marks): update doco.

	* input/regression/markup-note.ly: new file

	* input/regression/metronome-marking.ly: new file
