@@ -1,3 +1,11 @@
+2003-05-20  Heikki Junes  <hjunes@cc.hut.fi>
+
+	* lilypond-mode.el: Remove outdated code. Stress the difference 
+	between	Emacs and XEmacs definitions.
+
+	* lilypond-mode.el,
+	lilypond-indent.el: Define a function interactive only when necessary.
+
 2003-05-19  Heikki Junes  <hjunes@cc.hut.fi>
 
 	* lilypond-mode.el: Use temp-dir for Commands on Buffer/Region.
